--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
               <div class="gps">
                 <i class="fa-solid fa-location-dot here"></i>
               </div>
-              <input class="areasearch" type="text" value="Marseille,France" />
+              <input class="areasearch" type="text" value="Marseille, France" />
               <button class="btn-search">Rechercher</button>
+              <button class="btn-search-phone">
+                <i class="fa-solid fa-magnifying-glass"></i>
+              </button>
             </form>
           </div>
           <div class="filter">
@@ -60,7 +63,7 @@
                 <i class="iconfilter fa-solid fa-heart"></i> Romantique
               </label>
               <label class="buttonfilter">
-                <i class="iconfilter fa-solid fa-fire"></i> Nos pépites
+                <i class="iconfilter fa-solid fa-fire"></i> Nos&nbsp;pépites
               </label>
             </div>
           </div>
